Fix footer logo centering on tablet

--- a/css/main.css
+++ b/css/main.css
@@ -485,6 +485,13 @@ footer {
   justify-content: center;
 }
 
+.footer-logo-container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+
 .footer-logo {
   border: solid var(--white) 1px;
   background-color: var(--white);
